# dynamic_context_pruning

./: .gitignore  ADDING.md  CONTRIBUTING.md  Cargo.toml  DCP_API_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  OPENCODE_PLUGIN.md  PLAN.md  README.md  SPEC.md  dcp.schema.json  install.ps1  install.sh
.beads/: issues.jsonl
.github/workflows/: ci.yml  opencode-plugin.yml  release.yml
.opencode/: opencode.json
assets/images/: README.md
crates/dcp-claude-hook/: Cargo.toml
crates/dcp-claude-hook/src/: main.rs
crates/dcp-cli/: Cargo.toml
crates/dcp-cli/src/: main.rs
crates/dcp-cli/src/commands/: db.rs  find_session.rs  get_message.rs  message_tokens.rs  mod.rs  stats.rs  timeline.rs  token_stats.rs
crates/dcp-compress/: Cargo.toml
crates/dcp-compress/src/: block.rs  config.rs  error.rs  filter.rs  handler.rs  lib.rs  placeholder.rs  resolve.rs  timing.rs  types.rs  validate.rs  wrap.rs
crates/dcp-config/: Cargo.toml
crates/dcp-config/src/: cascade.rs  config.rs  config.rs.orig  config.rs.rej.orig  enums.rs  enums.rs.orig  error.rs  lib.rs  lib.rs.orig  limits.rs  sub_configs.rs  sub_configs.rs.orig
crates/dcp-config/tests/: cascade.rs
crates/dcp-core/: Cargo.toml
crates/dcp-core/src/: async_facade.rs  commands.rs  error.rs  lib.rs  pipeline.rs  pipeline.rs.orig  pruner.rs  strip.rs  tokenizer.rs
crates/dcp-core/tests/: integration_basic.rs
crates/dcp-hook/: Cargo.toml
crates/dcp-hook/src/: main.rs
crates/dcp-mcp/: Cargo.toml
crates/dcp-mcp/src/: main.rs
crates/dcp-messages/: Cargo.toml
crates/dcp-messages/src/: inject.rs  inject_utils.rs  lib.rs  priority.rs  query.rs  reasoning_strip.rs  shape.rs  subagents.rs  sync.rs  utils.rs
crates/dcp-notification/: Cargo.toml
crates/dcp-notification/src/: format.rs  lib.rs  notification.rs
crates/dcp-nudges/: Cargo.toml
crates/dcp-nudges/src/: lib.rs
crates/dcp-permissions/: Cargo.toml
crates/dcp-permissions/src/: auth.rs  compress_permission.rs  host_permissions.rs  lib.rs
crates/dcp-prompts/: Cargo.toml
crates/dcp-prompts/prompts/: compress-message.md  compress-range.md  context-limit-nudge.md  iteration-nudge.md  system.md  turn-nudge.md
crates/dcp-prompts/src/: lib.rs  store.rs
crates/dcp-prompts/src/extensions/: mod.rs  nudge.rs  system.rs  tool.rs
crates/dcp-protected/: Cargo.toml
crates/dcp-protected/src/: lib.rs
crates/dcp-prune/: Cargo.toml
crates/dcp-prune/src/: apply.rs  cache_stability.rs  config.rs  deduplicate.rs  lib.rs  purge_errors.rs  stale_file_reads.rs
crates/dcp-rig/: Cargo.toml
crates/dcp-rig/src/: lib.rs
crates/dcp-state/: Cargo.toml
crates/dcp-state/src/: config_like.rs  lib.rs  message_refs.rs  nudges.rs  session.rs  tool_cache.rs
crates/dcp-state/tests/: prop_rebuild.rs
crates/dcp-storage/: Cargo.toml
crates/dcp-storage/src/: file.rs  lib.rs  memory.rs
crates/dcp-telemetry/: Cargo.toml
crates/dcp-telemetry/src/: lib.rs
crates/dcp-tokens/: Cargo.toml
crates/dcp-tokens/src/: lib.rs
crates/dcp-traits/: Cargo.toml
crates/dcp-traits/src/: lib.rs
crates/dcp-types/: Cargo.toml
crates/dcp-types/src/: lib.rs
crates/dynamic_context_pruning/: Cargo.toml
crates/dynamic_context_pruning/src/: lib.rs
crates/opencode-dcp-bridge/: Cargo.toml
crates/opencode-dcp-bridge/src/: lib.rs  message.rs  pruner.rs
examples/: 01_minimal.rs  02_jcode_integration.rs  03_codex_integration.rs  04_custom_agent.rs  05_with_memory.rs  06_cache_stability.rs
opencode-dcp-plugin/: README.md  index.ts  package.json  tsconfig.json  tsup.config.ts  tui.tsx
opencode-dcp-plugin/lib/: bridge.ts  hooks.ts  logger.ts  message-ids.ts  notification.ts  token-utils.ts  types.ts  update.ts
opencode-dcp-plugin/lib/commands/: context.ts  decompress.ts  help.ts  manual.ts  stats.ts  sweep.ts
opencode-dcp-plugin/lib/compress/: message-utils.ts  pipeline.ts  state.ts
opencode-dcp-plugin/lib/messages/: prune.ts  reasoning-strip.ts  sync.ts  utils.ts
opencode-dcp-plugin/lib/messages/inject/: inject.ts
opencode-dcp-plugin/lib/prompts/: compress-range.ts  context-limit-nudge.ts  iteration-nudge.ts  turn-nudge.ts
opencode-dcp-plugin/lib/prompts/extensions/: nudge.ts
opencode-dcp-plugin/lib/state/: persistence.ts  state.ts  tool-cache.ts  types.ts  utils.ts
opencode-dcp-plugin/lib/tui/: commands.ts  data.ts  dialogs.tsx  format.ts  modals.tsx  types.ts  ui.tsx
opencode-dcp-plugin/lib/ui/: notification.ts  utils.ts
opencode-dcp-plugin/npm/darwin-arm64/: opencode-dcp-bridge.darwin-arm64.node  package.json
opencode-dcp-plugin/npm/darwin-x64/: package.json
opencode-dcp-plugin/npm/linux-x64-gnu/: package.json
opencode-dcp-plugin/npm/win32-x64-msvc/: package.json
opencode-dcp-plugin/ts_src/: bridge.ts  index.ts  tools.ts
scripts/: install-hooks.sh  pre-commit.sh  review-bead.sh
src/: lib.rs
tests/: smoke.rs
