[workspace]
resolver = "2"
members = [
    "crates/dcp-types",
    "crates/dcp-traits",
    "crates/dcp-tokens",
    "crates/dcp-protected",
    "crates/dcp-state",
    "crates/dcp-storage",
    "crates/dcp-prune",
    "crates/dcp-compress",
    "crates/dcp-prompts",
    "crates/dcp-nudges",
    "crates/dcp-config",
    "crates/dcp-telemetry",
    "crates/dcp-core",
    "crates/dcp-cli",
    "crates/dcp-rig",
    "crates/dcp-permissions",
    "crates/dcp-messages",
    "crates/dcp-notification",
    "crates/dynamic_context_pruning",
]
default-members = [".", "crates/dynamic_context_pruning"]

[workspace.package]
version = "0.1.0"
edition = "2024"
# Edition 2024 requires Rust 1.85.0 or newer. PLAN.md §15 Q3 had 1.75 as a
# proposed MSRV; bumped here to the minimum compatible with edition 2024.
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/quangdang46/dynamic_context_pruning"
keywords = ["llm", "agent", "context", "pruning", "tokens"]
categories = ["development-tools"]

[workspace.dependencies]
# External dependencies (PLAN.md Appendix A.1)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
# Note: `optional = true` is only valid on a consumer crate's [dependencies],
# not on workspace.dependencies. Consumers opt into these via
# `tokio = { workspace = true, optional = true }`.
tokio = { version = "1" }
proptest = { version = "1" }
insta = { version = "1" }
criterion = { version = "0.5" }
json5 = "0.4"
schemars = { version = "0.8", features = ["derive"] }
dcp-permissions = { path = "crates/dcp-permissions", version = "=0.1.0" }
dcp-messages = { path = "crates/dcp-messages", version = "=0.1.0" }
dcp-notification = { path = "crates/dcp-notification", version = "=0.1.0" }
dirs = "5"
tempfile = "3"
globset = "0.4"

# Internal crates — pinned to exact workspace version
dcp-types = { path = "crates/dcp-types", version = "=0.1.0" }
dcp-traits = { path = "crates/dcp-traits", version = "=0.1.0" }
dcp-tokens = { path = "crates/dcp-tokens", version = "=0.1.0" }
dcp-protected = { path = "crates/dcp-protected", version = "=0.1.0" }
dcp-state = { path = "crates/dcp-state", version = "=0.1.0" }
dcp-storage = { path = "crates/dcp-storage", version = "=0.1.0" }
dcp-prune = { path = "crates/dcp-prune", version = "=0.1.0" }
dcp-compress = { path = "crates/dcp-compress", version = "=0.1.0" }
dcp-prompts = { path = "crates/dcp-prompts", version = "=0.1.0" }
dcp-nudges = { path = "crates/dcp-nudges", version = "=0.1.0" }
dcp-config = { path = "crates/dcp-config", version = "=0.1.0" }
dcp-telemetry = { path = "crates/dcp-telemetry", version = "=0.1.0" }
dcp-core = { path = "crates/dcp-core", version = "=0.1.0" }
dcp-cli = { path = "crates/dcp-cli", version = "=0.1.0" }
dcp-rig = { path = "crates/dcp-rig", version = "=0.1.0" }
dynamic_context_pruning = { path = "crates/dynamic_context_pruning", version = "=0.1.0" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# ──────────────────────────────────────────────────────────────────────────
# Workspace-root package: hosts the public examples and the end-to-end
# smoke test (PLAN.md §5 / Appendix A). The root is both a virtual
# workspace and a package; the package itself ships nothing — it just
# binds Cargo's `[[example]]` / `[[test]]` machinery to files that live
# at the repository root rather than inside a member crate.
# ──────────────────────────────────────────────────────────────────────────
[package]
name = "dynamic_context_pruning_workspace"
description = "Workspace-root examples and end-to-end smoke test for dynamic_context_pruning."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
# Disable target auto-discovery; every example and integration test is
# listed explicitly below so the layout stays predictable.
autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "dynamic_context_pruning_workspace"
path = "src/lib.rs"

[dependencies]
dynamic_context_pruning = { workspace = true }

[dev-dependencies]
dynamic_context_pruning = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[[example]]
name = "01_minimal"
path = "examples/01_minimal.rs"

[[example]]
name = "02_jcode_integration"
path = "examples/02_jcode_integration.rs"

[[example]]
name = "03_codex_integration"
path = "examples/03_codex_integration.rs"

[[example]]
name = "04_custom_agent"
path = "examples/04_custom_agent.rs"

[[example]]
name = "05_with_memory"
path = "examples/05_with_memory.rs"

[[example]]
name = "06_cache_stability"
path = "examples/06_cache_stability.rs"

[[test]]
name = "smoke"
path = "tests/smoke.rs"
