[package]
name = "dcp-cli"
description = "Interactive CLI and debugging REPL for dynamic_context_pruning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "dcp"
path = "src/main.rs"

[dependencies]
dcp-core = { workspace = true }
dcp-types = { workspace = true }
dcp-config = { workspace = true }
dcp-compress = { workspace = true }
dcp-storage = { workspace = true }
dcp-traits = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
chrono = { workspace = true }
atty = "0.2"

[dependencies.rusqlite]
version = "0.31"
features = ["bundled"]
optional = true

[features]
default = []
scripts = ["dep:rusqlite"]

[dev-dependencies]
tempfile = "3"
