[package]
name = "dcp-compress"
description = "LLM-driven compression (range/message modes, block bookkeeping, frontier) for dynamic_context_pruning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dcp-types = { workspace = true }
dcp-traits = { workspace = true }
dcp-state = { workspace = true }
dcp-protected = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
