[package]
name = "dcp-core"
description = "ContextPruner facade and orchestration for dynamic_context_pruning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dcp-types = { workspace = true }
dcp-traits = { workspace = true }
dcp-tokens = { workspace = true }
dcp-protected = { workspace = true }
dcp-state = { workspace = true }
dcp-storage = { workspace = true }
dcp-prune = { workspace = true }
dcp-compress = { workspace = true }
dcp-prompts = { workspace = true }
dcp-nudges = { workspace = true }
dcp-config = { workspace = true }
dcp-telemetry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = "1"
lazy_static = { version = "1", default-features = false }
tokio = { workspace = true, optional = true, features = ["rt", "rt-multi-thread", "sync"] }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync"] }

[features]
default = []
# Async facade — wraps the sync core via `tokio::task::spawn_blocking`.
async = ["dep:tokio"]
# Tokenizer feature pass-through.
tokenizers = ["dcp-tokens/tokenizers"]
tiktoken-fast = ["dcp-tokens/tiktoken-fast"]
claude-tokens = ["dcp-tokens/claude-tokens"]
