[package]
name = "dcp-hook"
description = "Unified hook binary for Claude Code and Codex CLI dynamic_context_pruning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "dcp-hook"
path = "src/main.rs"

[dependencies]
dcp-core = { workspace = true }
dcp-types = { workspace = true }
dcp-config = { workspace = true }
dcp-storage = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
