[package]
name = "dcp-mcp"
description = "MCP server exposing dynamic_context_pruning via the Model Context Protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "dcp-mcp"
path = "src/main.rs"

[dependencies]
dcp-core = { workspace = true }
dcp-types = { workspace = true }
dcp-config = { workspace = true }
dcp-compress = { workspace = true }
dcp-notification = { workspace = true }
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
