[package]
name = "dcp-messages"
description = "Message query, shape, sync, priority, injection, and utilities for dynamic_context_pruning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dcp-types = { workspace = true }
dcp-traits = { workspace = true }
dcp-config = { workspace = true }
dcp-state = { workspace = true }
dcp-tokens = { workspace = true }
dcp-prompts = { workspace = true }
dcp-protected = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = "1"
sha2 = "0.10"