[package]
name = "dcp-nudges"
description = "Context-limit, turn, and iteration nudge injection for dynamic_context_pruning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dcp-types = { workspace = true }
dcp-traits = { workspace = true }
dcp-state = { workspace = true }
dcp-prompts = { workspace = true }
serde = { workspace = true }
regex = "1"
lazy_static = { version = "1", default-features = false }

[dev-dependencies]
serde_json = { workspace = true }
