[package]
name = "dcp-permissions"
description = "Auth, host permissions, and compress permission resolution for dynamic_context_pruning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dcp-types = { workspace = true }
dcp-state = { workspace = true }
dcp-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
base64 = "0.22"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }