[package]
name = "dcp-permissions"
description = "Auth, host permissions, and compress permission resolution for dynamic_context_pruning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
dcp-config = { workspace = true }
dcp-state = { workspace = true }
dcp-types = { workspace = true }
regex = "1"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }