[package]
name = "dcp-storage"
description = "Persistence backends (file, in-memory; optional sled/sqlite) for dynamic_context_pruning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dcp-types = { workspace = true }
dcp-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
# Optional storage backends — wired in Phase 2+.
sled = []
sqlite = []
