[package]
name = "dcp-telemetry"
description = "Telemetry, metrics, and observer hooks for dynamic_context_pruning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dcp-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { version = "0.4", optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = []
# Forward telemetry events to the `log` crate via [`LoggingObserver`].
logging = ["dep:log"]
# Quality regression detector (Phase 6+).
quality = []
