[package]
name = "dcp-traits"
description = "Pluggable traits (Tokenizer, StatePersistence, MemoryRetriever, CacheAccountant, PruneStrategy) for dynamic_context_pruning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dcp-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
