[package]
name = "opencode-dcp-bridge"
version = "0.1.0"
edition = "2024"
description = "NAPI-RS bridge for DCP (Dynamic Context Pruning) - OpenCode plugin"

[lib]
crate-type = ["cdylib"]

[dependencies]
dcp-core = { path = "../dcp-core" }
dcp-config = { path = "../dcp-config" }
dcp-types = { path = "../dcp-types" }
dcp-storage = { path = "../dcp-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
